create MarkingRequired interface, implement for several tracks